<resources>
    <string name="app_name">DMS Egypt</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_fullname">The fullname must consists of three names</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_cardID">This card ID is invalid</string>
    <string name="error_invalid_nationalID">This national ID is invalid</string>
    <string name="error_invalid_mobile">This mobile number is invalid</string>
    <string name="error_not_match_mobile">mobile numbers do not match</string>
    <string name="error_invalid_short_password">This password is too short</string>
    <string name="error_not_match_password">passwords do not match</string>
    <string name="error_invalid_long_password">This password is too long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_cardID_registered_before">Card ID registered before</string>
    <string name="error_username_not_available">Username not available</string>
    <string name="error_no_data_available">No data available</string>
    <string name="error_verification_code">Code not match</string>
    <string name="error_not_available_address">Unknown address</string>
    <string name="not_available_address"></string>
    <string name="not_available_phone"></string>
    <string name="not_available_email"></string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="welcome_to_dms">Welcome to DMS</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="card_id">Card ID</string>
    <string name="national_id">National ID</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="unknown_user">can\'t connect To server</string>
    <string name="action_home">Home</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_about">About DMS</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="type">Type</string>
    <string name="details">Details</string>
    <string name="transition_photo_image">photo_image</string>
    <string name="transition_photo_background">photo_background</string>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="view_profile">View profile</string>
    <string name="mobile_number">Mobile number</string>
    <string name="transition_user_avatar">user_avatar</string>
    <string name="my_account">My account</string>
    <string name="notification">Notifications</string>
    <string name="change_password">Change password</string>
    <string name="Enter_new_password">Enter new password</string>
    <string name="info_more_details">More details</string>
    <string name="info_address">Address</string>
    <string name="info_email">Email</string>
    <string name="info_phone_number">Phone number</string>
    <string name="info_type">Type</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="content_about_details">D.M.S was founded in 2002 by health care industry veterans who seeked to offer health care cost containment solutions to clients from all over the world. In order to address this issue, D.M.S has established a network that enables cooperates requiring health care treatment for their employee to receive such care.\n\nD.M.S network gives your employees broad access to physicians, specialists and hospitals with such an extensive network, enrollees can be assured that they will be covered all over Egypt never the less. He will be covered anywhere in the world and our payors can count on assistance and cost control on a global scale. Whether an insured need a simple referral for outpatient treating, long term housing or emergency, we are there.\n\nD.M.S works with a capital of 90,000,000 Egyptian Pounds with increasingly sales growth volume each year.</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="mobile_number_confirm">Confirm mobile number</string>
    <string name="action_complaints">Complaints</string>
    <string name="action_requests">Approval Requests</string>
    <string name="action_network">Network</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_family">Family member</string>
    <string name="prompt_birth_date">Birthdate</string>
    <string name="dms_website"><u>DMS website</u></string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="unknown_error">Unknow error</string>
    <string name="verify_mobile_number">Verify your Mobile Number</string>
    <string name="enter_the_code_received_via_sms">Enter the code received via SMS</string>
    <string name="verification_code">verification code</string>
    <string name="d_m_s_growth">D.M.S GROWTH</string>
    <string name="history">History</string>
    <string name="error_inernet_connection">error internet connection</string>
    <string name="search_by_name">Search by name or Card Id</string>
    <string name="msg_loading">Loading...</string>
    <string name="coming_soon">Coming soon</string>
    <string name="api_store_data_url">http://carreto.pt/tools/android-store-version/?package=com.dmsegypt.dms</string>
    <string name="provider">Provider</string>
    <string name="no_providers">There is no providers</string>
    <string name="choose_complains_type">Choose what you want to complains</string>
    <string name="service">Service</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_hint">Description...</string>
    <string name="upload_image">Upload image</string>
    <string name="complaint_successed">Your Complaint submitted successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_member_confirmation">Are you sure you want to delete this member?</string>
    <string name="add_new_member">Add New Member</string>
    <string name="action_add_member">Add Member</string>
    <string name="action_switch_user">Switch User</string>
    <string name="action_employees">Employees</string>
    <string name="search_by_emp">Search by employee name or card id</string>
    <string name="add_new_employees">Add New Employee</string>
    <string name="action_check_status">Check Status</string>
    <string name="label_check_number">Check Number :</string>
    <string name="label_date">Date:</string>
    <string name="label_status">Status:</string>
    <string name="change_languague">Change Language</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="add_new_photo">Add New Photo</string>
    <string name="action_approve">Phone Approve</string>
    <string name="Spicific">Specific</string>
    <string name="Category">Select Service Type</string>
    <string name="Categoryapprove">Select Type</string>
    <string name="send_request">Send Request</string>
    <string name="title_hint">Title...</string>
    <string name="action_chronic_medication">Chronic medication</string>
    <string name="warning_text"> سوف يتم خصم هذه الادوية من رصيدك \n في حالة عدم الموافقه \n أو الاعتراض يرجي الاتصال \n علي رقم 201205566395+</string>
    <string name="label_push_message">Push notification: </string>
    <string name="ok">OK</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_switch_user">Switch User</string>
    <string name="label_not_found_notifictaion">Not Found Notifications</string>
    <string name="label_no_conenction">something went wrong,please check your internet.</string>
    <string name="label_no_internet">No Internet</string>
    <string name="error_exceed_size">Image size must not exceed 1MB !!</string>
    <string name="action_reload">Reload</string>
    <string name="label_chronic_title">Upload  your prescription</string>
    <string name="err_no_medicine">Medicines Not Found</string>
    <string name="label_upload">Upload  your prescription</string>
    <string name="msg_send_request">Sending Request</string>
    <string name="mesg_reuqest_send">Your Request Has Been Submitted SuccessFully , you will Receive our Replay soon</string>
    <string name="err_empty_field">Empty Field</string>
    <string name="err_empty_category">Empty Request Type</string>
    <string name="error_not_select_requets">Please Select Request Type</string>
    <string name="google_place_api">AIzaSyB7McY1VtTgTk7BlMeGrHzw5XNdZhIsKu8</string>
    <string name="msg_reolad">Reload</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="msg_empty_user">Empty Users</string>
    <string name="err_family_member">Not Found Any Family member</string>
    <string name="Gender">Gender</string>
    <string name="relativerelation">Relation</string>
    <string name="relationcard">Relational Card Id</string>
    <string name="cost_center">Cost Center</string>
    <string name="add_new_prescription">Add new Prescription</string>
    <string name="action_chronic">Chronic</string>
    <string name="action_edit_card_tool">Edit Card</string>
    <string name="action_edit_card">Edit Card</string>
    <string name="Degree">Degree</string>
    <string name="full_name_arab">Arabic Full name</string>
    <string name="msg_request_sent">Request Sent Successfully</string>
    <string name="err_data_load_failed">Connection Failed</string>
    <string name="action_UserRequests">My Requests</string>
    <string name="refuse">Refuse</string>
    <string name="notes_hint">Notes ?</string>
    <string name="action_send_reply">Send Reply</string>
    <string name="msg_Reply_sent">Reply Sent Successfully</string>
    <string name="action_add_providers">Add Provider</string>
    <string name="action_batch">Deductions</string>
    <string name="action_indmnity">Idemnity</string>
    <string name="action_Massenger">Massenger</string>
    <string name="chat_title">Chat</string>
    <string name="Resend_Code">Resend Verification Code</string>
    <string name="action_search">Network</string>
    <string name="admin_title">Admin</string>
    <string name="All">All</string>
    <string name="Done">Done</string>
    <string name="Pending">Pending</string>
    <string name="Holding">Holding</string>
    <string name="Approval">Approval</string>
    <string name="title_summray_contract">Contracts</string>
    <string name="title_tele_sales">Tele Sales</string>
    <string name="action_prescription">Medication Delivery</string>
    <string name="action_orders">Medicine Order</string>
    <string name="action_scan_card">Scan Card</string>
    <string name="after_sales">After Sales</string>
</resources>