<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/action_about"
            android:checkable="false"
            android:icon="@mipmap/ic_info"
            android:orderInCategory="100"
            android:title="@string/action_about" />



        <item
            android:id="@+id/sub_action_network_search"
            android:checkable="true"
            android:icon="@drawable/ic_search"
            android:orderInCategory="100"
            android:title="@string/action_search"
            android:visible="true"
            />

        <item
            android:id="@+id/action_requests"
            android:checkable="false"
            android:icon="@drawable/ic_request"
            android:orderInCategory="100"
            android:title="@string/action_requests"
            />


        <item
            android:id="@+id/action_chronic_medication"
            android:icon="@drawable/ic_chronic_medication"
            android:orderInCategory="100"
            android:title="@string/action_chronic_medication"
            android:visible="true"
            tools:visible="true" />

        <item
            android:id="@+id/action_family"
            android:icon="@drawable/ic_family_members"
            android:orderInCategory="100"
            android:title="@string/action_family" />




        <item
            android:id="@+id/action_notifications"
            android:checkable="false"
            android:icon="@drawable/ic_notifications_none"
            android:orderInCategory="100"
            android:title="@string/action_notifications"
            app:actionViewClass="android.widget.TextView">

        </item>

        <item
            android:id="@+id/action_prescription"
            android:checkable="false"
            android:icon="@drawable/ic_prescription_24dp"
            android:orderInCategory="100"
            android:title="@string/action_prescription">

        </item>

        <item
            android:id="@+id/action_complaints"
            android:checkable="false"
            android:icon="@drawable/ic_report_problem"
            android:orderInCategory="100"
            android:title="@string/action_complaints" />

        <item
            android:id="@+id/action_chat"
            android:title="@string/chat_title"
            android:checkable="false"
            android:icon="@drawable/ic_chat_black_24dp"
            android:orderInCategory="100" />



    </group>


</menu>
