<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:bbn_itemColorActive="#FFFFFFFF"
    app:bbn_itemColorInactive="#7FFFFFFF"
    app:bbn_badgeColor="#FFCC0000"
    app:bbn_rippleColor="#99FFFFFF">

    <item
        android:color="@color/colormain"
        android:id="@+id/bbn_item1"
        android:icon="@drawable/massenger_all_white"
        android:title="@string/All" />
    <item
        android:id="@+id/bbn_item5"
        android:color="#00d625"
        android:icon="@drawable/massenger_done_white"
        android:title="@string/Done" />
    <item
        android:id="@+id/bbn_item3"
        android:color="@android:color/holo_orange_light"
        android:icon="@drawable/massenger_pending_white"
        android:title="@string/Pending" />
    <item
        android:id="@+id/bbn_item4"
        android:color="#FF5252"
        android:icon="@drawable/massenger_holding_white"
        android:title="@string/Holding" />


    <item
        android:id="@+id/bbn_item2"
        android:color="@color/colorPrimary"
        android:icon="@drawable/massenger_approval_white"
        android:title="@string/Approval" />

</menu>